--- a/src/assets/components/Header/Header.scss
+++ b/src/assets/components/Header/Header.scss
@@ -12,6 +12,8 @@ header{
     border-bottom: 1px solid #000;
     .logo{
         font-family: Motisan;
+        text-wrap: wrap;
+        height: fit-content;
     }
     ul{
         display: flex;
@@ -60,6 +62,7 @@ header{
         display: flex;
         gap: 14px;
         align-items: center;
+        padding: 1.5em;
     }
     .menuIcon{
         display: none;
