--- a/src/assets/components/Header/Reponsive.scss
+++ b/src/assets/components/Header/Reponsive.scss
@@ -3,11 +3,13 @@
 header{
     @include xs{
         position: static;
+        div{
+            padding: 10px;
+        }
         ul{
-            display: none;
             width: 100%;
             flex-direction: column;
-            height: -100px;
+            display: none;
             transition: all 0.6s ease-in-out;
         }
         .themeIcon{
@@ -33,8 +35,11 @@ header{
                     height: fit-content;
                     background: wheat;
                     align-items: revert;
+
+                    div{
+                        align-items: revert;
+                    }
                 }
-        }
-        
+        }   
     }
 }
