--- a/src/assets/components/ThirdSection/ThirdSection.scss
+++ b/src/assets/components/ThirdSection/ThirdSection.scss
@@ -86,18 +86,18 @@
 
         }
     .card{
-        flex-basis: calc(33.33333% - 30px);
-        height: 360px;
+        flex-basis: calc(33% - 30px);
+        height: 320px;
         border-radius: 12px;
         font-family: Memoirs;
-        padding: 0px 20px;
+        padding: 0px 15px;
         display: flex;
         flex-direction: column;
         position: relative;
         background: ghostwhite;
         overflow: hidden;
         color: black;
-        padding-bottom: 20px;
+        padding-bottom: 70px;
         margin: 0 15px 30px;
         box-shadow: 10px 10px 6px rgba(0, 0, 0, 0.2);
         transition: all 0.1s ease;
@@ -136,7 +136,8 @@
         .front{
             position: relative;
             background:transparent;
-            top: 83%;
+            top: 92%;
+            padding-bottom: 30px;
             transition: all 0.3s ease;
         }
         .cardBg{
@@ -154,7 +155,7 @@
         }
         h4{
             font-family: salks;
-            font-size: 32px;
+            font-size: 28px;
             text-wrap: wrap;
             line-height: 29px;
             letter-spacing: 1px;
@@ -184,5 +185,8 @@
 
     .reponsiveFooter{
         display: none;
+        p{
+            display: none;
+        }
     }
 }
