--- a/src/assets/components/FourthSection/FourthSection.scss
+++ b/src/assets/components/FourthSection/FourthSection.scss
@@ -89,6 +89,7 @@
         p{
             word-wrap: wrap;
             text-align: center;
+            color: #666;
         }
 
     }
@@ -96,6 +97,7 @@
         margin: 20px 0px;
         text-align: center;
         font-weight: normal;
+        color: #666;
 
         span{
             color: #6E07F3;
