--- a/src/assets/components/SecondSection/SecondSection.scss
+++ b/src/assets/components/SecondSection/SecondSection.scss
@@ -43,6 +43,7 @@
             letter-spacing: normal;
             border-top: 3px solid #000;
             font-weight: 900;
+            color: #666;
 
         }
     }
