--- a/src/assets/components/ThirdSection/ThirdSection.scss
+++ b/src/assets/components/ThirdSection/ThirdSection.scss
@@ -1,6 +1,6 @@
 .thirdSection{
     width: 100vw;
-    min-height: 100vh;
+    max-height: 100vh;
     background: white;
     display: flex;
     flex-direction: column;
@@ -170,15 +170,14 @@
             font-size: 14px;
             line-height: 13px;
             z-index: 2;
+            margin-bottom: 30px;
         }
         a{
             font-size: 16px;
             text-decoration: underline;
             position: relative;
             z-index: 2;
-            width: fit-content;
             color: inherit;
-            margin-top: 10px;
         }
 
     }
