worked on some feedback

--- a/src/assets/components/FirstSection/FirstSection.scss
+++ b/src/assets/components/FirstSection/FirstSection.scss
@@ -31,8 +31,8 @@
             }
             h3{
                 font-size: 19px;
-                line-height: 16px;
-                font-family: lepraqun;
+                line-height: 23px;
+                font-family: Smeltex;
                 color: #666;
             }
         }
