--- a/src/assets/components/FourthSection/FourthSection.scss
+++ b/src/assets/components/FourthSection/FourthSection.scss
@@ -41,6 +41,7 @@
             line-height: 38px;
             padding-left: 20px;
             margin-bottom: 20px;
+            color: #666;
         }
 
         ul{
