--- a/src/assets/components/SecondSection/Responsive.scss
+++ b/src/assets/components/SecondSection/Responsive.scss
@@ -3,7 +3,7 @@
     @include xs{
          flex-direction: column;
          height: fit-content;
-         padding-top: 0;
+         padding-top: 30px;
          padding-bottom: 60px;
 
          .serviceHeading{
