--- a/src/assets/components/SecondSection/SecondSection.scss
+++ b/src/assets/components/SecondSection/SecondSection.scss
@@ -44,6 +44,7 @@
             border-top: 3px solid #000;
             font-weight: 900;
             color: #666;
+            text-wrap: nowrap;
 
         }
     }
