--- a/src/assets/components/FourthSection/Reponsive.scss
+++ b/src/assets/components/FourthSection/Reponsive.scss
@@ -3,5 +3,19 @@
 .fourthSection{
     @include xs{
         flex-direction: column;
+        aside{
+            &:nth-child(2){
+                padding-top: 50px;
+            }
+        }
+        .topHeading{
+            text-align: center;
+        }
+        .heading {
+            h3{
+                text-align: center;
+                font-size: 26px;
+            }
+        }
     }
 }
