--- a/src/assets/components/ThirdSection/Reponsive.scss
+++ b/src/assets/components/ThirdSection/Reponsive.scss
@@ -3,7 +3,7 @@
 .thirdSection{
     @include xs{
         min-height: 600px;
-        max-height: 85vh;
+        max-height: 882px;
         overflow: hidden;
         flex-direction: column;
         align-items: center;
