worked on some feedback

--- a/src/assets/components/SecondSection/SecondSection.scss
+++ b/src/assets/components/SecondSection/SecondSection.scss
@@ -23,7 +23,9 @@
             color: dodgerblue;
         }
         h4{
-            font-family: Ralsteda Italics;
+            font-family: Smeltex;
+            font-size: 16px;
+            line-height: 18px;
             color: #22313f;
             font-weight: bold;
         }
