worked on some feedback

--- a/src/assets/components/Header/Reponsive.scss
+++ b/src/assets/components/Header/Reponsive.scss
@@ -23,10 +23,12 @@ header{
         }
         .logo{
             color: white;
+            padding: 0;
         }
         .menuIcon{
             display: flex;
             color: white;
+            padding: 0;
         }
         .headerBtn{
             display: none;
