--- a/src/assets/components/FourthSection/Reponsive.scss
+++ b/src/assets/components/FourthSection/Reponsive.scss
@@ -18,4 +18,11 @@
             }
         }
     }
+    @include sm{
+        .topHeading{
+            p{
+                text-align: left;
+            }
+        }
+    }
 }
