--- a/src/assets/components/Footer/Footer.scss
+++ b/src/assets/components/Footer/Footer.scss
@@ -61,6 +61,7 @@
         font-family: Motisan;
         font-weight: 900;
         color: white;
+        font-size: 24px;
         text-align: center;
     }
     h2{
