--- a/src/assets/components/FourthSection/FourthSection.scss
+++ b/src/assets/components/FourthSection/FourthSection.scss
@@ -1,7 +1,7 @@
 .fourthSection{
     width: 100vw;
     min-height: 100vh;
-    background:#f2f2f2;
+    background:var(--whitesmoke-bg);
     display: flex;
     padding: 0px 45px;
     padding-top: 90px;
@@ -27,7 +27,7 @@
         }
         p{
             font-family: Futura;
-            color: #22313f;
+            color: var(--special-font);
             font-weight: bold;
             text-align: center;
             text-wrap: wrap;
@@ -41,7 +41,7 @@
             line-height: 38px;
             padding-left: 20px;
             margin-bottom: 20px;
-            color: #666;
+            color: var(--font-color);
         }
 
         ul{
@@ -61,9 +61,9 @@
                     letter-spacing: 1px;
                     font-family: Futura;
                     padding: 7px 12px;
-                    color:#666;
+                    color:var(--font-color);
                     border-radius: 6px;
-                    border: 1px solid #666;
+                    border: 1px solid var(--font-color);
                     background: #99999933;
                 }
             }
@@ -85,20 +85,24 @@
         h3{
             font-family: Salks;
             font-size: 32px;
-            color: #666;
+            color: var(--font-color);
+            text-wrap: nowrap;
+            margin-bottom: 14px;
         }
         p{
             word-wrap: wrap;
             text-align: center;
-            color: #666;
+            color: var(--font-color);
         }
 
     }
     .lang{
         margin: 20px 0px;
+        font-size: 20px;
+        font-family: Futura;
         text-align: center;
         font-weight: normal;
-        color: #666;
+        color: var(--font-color);
 
         span{
             color: #6E07F3;
@@ -111,11 +115,13 @@
         h4{
             color: #6E07F3;
             font-weight: 900;
+            font-size: 20px;
         }
         p{
-            color: #666;
+            color: var(--font-color);
             font-family: Futura;
             margin-bottom: 2px;
+            font-size: 16px;
         }
     }
 
