--- a/src/assets/components/Header/Reponsive.scss
+++ b/src/assets/components/Header/Reponsive.scss
@@ -18,17 +18,19 @@ header{
             justify-self: end;
             font-weight: bolder;
         }
-        .themeIcon{
-            display: none;
-        }
         .logo{
-            color: white;
+            color: var(--default-white);
             padding: 0;
+        }
+        .themeIcon{
+            color: var(--default-white);
         }
         .menuIcon{
             display: flex;
-            color: white;
+            color: var(--default-white);
             padding: 0;
+            font-size: 20px;
+            align-items: center;    
         }
         .headerBtn{
             display: none;
@@ -37,18 +39,18 @@ header{
             li{
                 &:hover{
                     a{
-                        color: white;
+                        color: var(--default-white);
                     }
                     &::before{
-                        background: white;
+                        background: var(--default-white);
                     }
                 }
                 &::before{
                     z-index: 10;
-                    background: white;
+                    background: var(--default-white);
                 }
                 a{
-                    color: white;
+                    color: var(--default-white);
                 }
             }
         }
