--- a/src/assets/components/ThirdSection/Reponsive.scss
+++ b/src/assets/components/ThirdSection/Reponsive.scss
@@ -7,6 +7,7 @@
         overflow: hidden;
         flex-direction: column;
         align-items: center;
+
         .cardCtnr{
             .heading{
                 width: 100%;
@@ -14,6 +15,17 @@
 
             .card{
                 flex-basis: content;
+                height: 380px;
+                padding-bottom: 80px;
+
+                .front{
+                    top: 40%;
+                    color: white;
+                }
+
+                .cardBg{
+                    transform: scale(4);
+                }
             }
         }
 
@@ -28,7 +40,7 @@
             left: 0;
             cursor: pointer;
             z-index: 20;
-            background: white;
+            background: inherit;
             p{
                 display: block;
                 text-decoration: underline;
@@ -39,6 +51,11 @@
     @include sm{
         .cardCtnr{
             .card{
+                flex-basis: calc(50% - 30px);
+                height: 360px;
+                padding-bottom: 30px;
+            }
+            .heading{
                 flex-basis: calc(50% - 30px);
             }
         }
