--- a/src/assets/components/FirstSection/FirstSection.scss
+++ b/src/assets/components/FirstSection/FirstSection.scss
@@ -13,6 +13,7 @@
         flex-direction: column;
         gap: 45px;
         position: relative;
+        justify-content: center;
 
         .introDiv{
             display: flex;
