--- a/src/assets/components/FirstSection/Reponsive.scss
+++ b/src/assets/components/FirstSection/Reponsive.scss
@@ -12,7 +12,7 @@
                 padding-top: 40px;
 
                 h3{
-                    text-align: center;
+                    text-align: left;
                     margin-top: 20px;
                 }
             }
