--- a/src/assets/components/FourthSection/FourthSection.scss
+++ b/src/assets/components/FourthSection/FourthSection.scss
@@ -1,11 +1,11 @@
 .fourthSection{
     width: 100vw;
-    min-height: 100vh;
+    min-height: fit-content;
     background:var(--whitesmoke-bg);
     display: flex;
     padding: 0px 45px;
     padding-top: 90px;
-    padding-bottom: 30px;
+    padding-bottom: 100px;
     
     aside{
         flex: 1;
